# MQTT

./: README.md  guide_test_mosquitto.txt  learn mosquitto.7z  mqtt_guide.doc  project2 mqqt.7z  project3.7z  project3_mqtt_ok.7z  project5_mqqt.7z
Project1/: CMakeLists.txt
Project1/include/: MqttClient.h  MqttManager.h
Project1/src/: MqttClient.cpp  MqttManager.cpp  main.cpp
build_mosquitto/: a.sh  guide.txt
mqtt_c/: .mqtt_pub.c  main  main.c  main.cpp  main.out  mqtt_pub  mqtt_pub.c  readme.txt
mqtt_cpp/: CMakeLists.txt  MyMosquitto.cpp  MyMosquitto.h  main  main.cpp  note.txt
project2/: CMakeLists.txt  mqttmanager.cpp
project3/include/: mqttclient.h
project3/src/: main.cpp
project4/: CMakeLists.txt
project4/include/: mqttmanager.h
project4/src/: main.cpp  mqttclient.cpp
project5_mqqt/: CMakeLists.txt
project5_mqqt/include/: mqttclient.h  mqttmgr.h
project5_mqqt/src/: main.cpp  mqttclient.cpp  mqttmgr.cpp
test/: main  main.cpp
